--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-router/serve": "^7.5.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.17.0",
     "isbot": "^5.1.27",
     "lucide-react": "^0.513.0",
     "react": "^19.1.0",
